--- a/app/eyeo/package.json
+++ b/app/eyeo/package.json
@@ -1,3 +1,3 @@
-{ "name" : "Auth  Module"
-, "main" : "auth.js"
+{ "name" : "IO  Module, anything that returns data is here"
+, "main" : "eyeo.js"
 }
