--- a/config/default.yaml
+++ b/config/default.yaml
@@ -3,3 +3,4 @@ app:
   pub_dir: "/public"
   csrf: false
   cookie_secret: "Your secret key salt goes here. Replace with random, long string in your project."
+  db: "mongodb://javasop:osamah1989@ds051630.mongolab.com:51630/branchit"
