working on user module

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "underscore": "1.x",
     "metalogger": "*",
     "passport": "~0.2.1",
-    "mongoose": "~3.8.21"
+    "mongoose": "~3.8.21",
+    "nodemon": "~1.2.1",
+    "passport-local": "~1.0.0"
   },
   "devDependencies": {
     "after": "^0.8.1",
@@ -41,8 +43,9 @@
     "glob": "^4.3.2"
   },
   "scripts": {
-    "prepublish": "npm prune",
+    "start": "NODE_PATH=./config:./app/ NODE_ENV=development ./node_modules/.bin/nodemon server.js",
     "test": "mocha --require test/support/env --reporter spec --bail --check-leaks test/ test/acceptance/",
+    "prepublish": "npm prune",
     "pretest": "jshint lib test",
     "test-cov": "istanbul cover node_modules/mocha/bin/_mocha -- --require test/support/env --reporter dot --check-leaks test/ test/acceptance/",
     "test-travis": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --require test/support/env --reporter spec --check-leaks test/ test/acceptance/"
