added and tested users module

--- a/package.json
+++ b/package.json
@@ -17,20 +17,20 @@
     "node": ">=0.8.8"
   },
   "dependencies": {
-    "yaml": "*",
-    "express": "4.x",
-    "nodebootstrap-server": "*",
-    "nodebootstrap-clustering": "*",
     "config": "*",
+    "express": "4.x",
     "hbs": "2.x",
     "less": "2.x",
     "less-middleware": "*",
-    "underscore": "1.x",
     "metalogger": "*",
-    "passport": "~0.2.1",
     "mongoose": "~3.8.21",
-    "nodemon": "~1.2.1",
-    "passport-local": "~1.0.0"
+    "nodebootstrap-clustering": "*",
+    "nodebootstrap-server": "*",
+    "nodemon": "^1.2.1",
+    "passport": "~0.2.1",
+    "passport-local": "~1.0.0",
+    "underscore": "1.x",
+    "yaml": "*"
   },
   "devDependencies": {
     "after": "^0.8.1",
@@ -44,6 +44,7 @@
   },
   "scripts": {
     "start": "NODE_PATH=./config:./app/ NODE_ENV=development ./node_modules/.bin/nodemon server.js",
+    "test-mocha": "NODE_PATH=./config:./app/controllers NODE_ENV=test ./node_modules/.bin/mocha --reporter spec --timeout 10000 test/test-*.js",
     "test": "mocha --require test/support/env --reporter spec --bail --check-leaks test/ test/acceptance/",
     "prepublish": "npm prune",
     "pretest": "jshint lib test",
