--- a/app/eyeo/package.json
+++ b/app/eyeo/package.json
@@ -1,3 +1,4 @@
-{ "name" : "IO  Module, anything that returns data is here"
-, "main" : "eyeo.js"
+{
+  "name": "IO  Module, anything that returns data is here",
+  "main": "eyeo.js"
 }
